--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -23,20 +23,18 @@
     href="#/tab/about">
     <ion-nav-view name="about-tab"></ion-nav-view>
   </ion-tab>
-
-  <ion-tab title="Login" icon="ion-information-circled"
-    href="#/tab/login" ng-hide="currentUser" >
+<!--  <ion-tab  ng-hide="currentUser" title="Login" icon="ion-information-circled"
+    href="#/tab/home/login" ng-hide="currentUser" >
     <ion-nav-view name="login-tab"></ion-nav-view>
-  </ion-tab>
+  </ion-tab>-->
 
-  <ion-tab title="Register" icon="ion-information-circled"
+  <!--<ion-tab ng-hide="currentUser" title="Register" icon="ion-information-circled"
     href="#/tab/register" ng-hide="currentUser" >
     <ion-nav-view name="register-tab"></ion-nav-view>
-  </ion-tab>
+  </ion-tab>-->
 
-  <ion-tab title="Success" icon="ion-information-circled"
+<!--  <ion-tab ng-hide="currentUser" title="Success" icon="ion-information-circled"
     href="#/tab/success">
     <ion-nav-view name="success-tab"></ion-nav-view>
-  </ion-tab>
-
+  </ion-tab>-->
 </ion-tabs>
