--- a/www/views/register.html
+++ b/www/views/register.html
@@ -41,7 +41,7 @@
         <button type="submit" class="btn"
                 ng-disabled="myform.$invalid">Register
         </button>
-        <p>or <a ng-href="#/tab/login">login</a></p>
+        <p>or <a ng-href="#/tab/home/login">login</a></p>
       </form>
     </section>
   <!--</ion-content>-->
