--- a/www/templates/list.html
+++ b/www/templates/list.html
@@ -21,7 +21,7 @@
         <option value="a very long value for an empty list" ng-selected="true">Select your Camera</option> <!-- value="" -->
         <option ng-repeat='camera in cameras' value="{{camera.shortname}}"  ng-show="camera.format == 'DX'">{{camera.shortname}}</option>
         <!--<option>-------------</option>-->
-        <!--<option ng-repeat='camera in cameras' ng-show="camera.format == 'FX'">{{camera.shortname}}</option>-->
+        <option ng-repeat='camera in cameras' ng-show="camera.format == 'FX'">{{camera.shortname}}</option>
       </select>
     </label>
 
@@ -52,33 +52,30 @@
               show-reorder="data.showReorder">
 
       <!--Test für multiple Ion Items pro Modul-->
-      <ion-item ng-repeat='module in modules | filter:select.camera:strict | filter: select.module'
+<!--      <ion-item ng-repeat='module in modules | filter:select.camera:strict | filter: select.module'
                 class="item-thumbnail-left item-text-wrap" href="#/tab/list/{{module.shortname}}">
-        <!--<img ng-src="img/{{module.level}}-tn.png" alt="{{ module.level }}">-->
+        &lt;!&ndash;<img ng-src="img/{{module.level}}-tn.png" alt="{{ module.level }}">&ndash;&gt;
         <p ng-repeat="model in module.relevantmodels">Test:{{model}}-{{module.shortname}} </p>
-      </ion-item> <!--Test für multiple Ion Items pro Modul Ende-->
+      </ion-item> &lt;!&ndash;Test für multiple Ion Items pro Modul Ende&ndash;&gt;-->
+
 
 
       <ion-item ng-repeat='module in modules | filter:select.camera:strict | filter: select.module'
-                class="item-thumbnail-left item-text-wrap" href="#/tab/list/{{module.shortname}}">
-
+                class="item item-thumbnail-left  item-text-wrap" href="#/tab/list/{{module.shortname}}">
         <img ng-src="img/{{module.level}}-tn.png" alt="{{ module.level }}">
-
-
         <h2>{{module.title | uppercase }}</h2>
-        <p>{{module.description| limitTo: 100}} {{ module.description.length > 100 ? '...' : '' }}</p>
+        <p>{{module.description| limitTo: 83}} {{ module.description.length > 83 ? '...' : '' }}</p>
         <ion-delete-button class="ion-minus-circled" ng-click="onItemDelete(module)"/>
 
         <!--DELETE AFTER DEVELOPMENT - SHOWS RELEVANT PRODUCT MODEL VARIANTS-->
-        <ul ng-show="module.relevantmodels">
-          <!--DISPLAY ONLY IF RELEVANT CAMERA MODELS AVAILABLE-->
+<!--        <ul ng-show="module.relevantmodels">
+          &lt;!&ndash;DISPLAY ONLY IF RELEVANT CAMERA MODELS AVAILABLE&ndash;&gt;
           <p>This course is available for Cameras: </p>
           <li ng-repeat="relevantmodel in module.relevantmodels">
             <p>{{relevantmodel | uppercase }}</p>
           </li>
-        </ul><!--DELETE AFTER DEVELOPMENT ENDE-->
-        <ion-reorder-button class="ion-navicon"
-                            on-reorder="moveItem(module, $fromIndex, $toIndex)"></ion-reorder-button>
+        </ul>--><!--DELETE AFTER DEVELOPMENT ENDE-->
+        <ion-reorder-button class="ion-navicon" on-reorder="moveItem(module, $fromIndex, $toIndex)"/>
 
         <!--Buttons with Dynamic AR content-->
         <ion-option-button ng-click="launchAR('{{module.ARView.URL}}')"
