--- a/www/wikitude-worlds/common-assets/css/default.css
+++ b/www/wikitude-worlds/common-assets/css/default.css
@@ -27,7 +27,7 @@ div.__OVERLAY__mainDiv{
   display: table;
   width: 100%;
   height: 28px;
-  opacity: 0.7;
+  opacity: 1;
   top: 0;
   left: 0;
   right: 0;
@@ -36,7 +36,10 @@ div.__OVERLAY__mainDiv{
 
 .info {
 }
-
+.navbutton{
+  opacity: 1;
+}
+/*
 .button {
 	font-size: large;
 	position: absolute;
@@ -50,6 +53,7 @@ div.__OVERLAY__mainDiv{
 	opacity: 0.7;
 	display: table;
 }
+*/
 
 
 .top {
@@ -72,34 +76,34 @@ div.__OVERLAY__mainDiv{
 #backbtn {
   position: absolute;
   background-color: #0000000;
-  top: 0;
-  left: 0;
+  /*top: 0;*/
+  /*left: 0;*/
   opacity: 1;
-  max-width: 38px;
+  /*max-width: 38px;*/
 }
 
 #helpbtn{
   position: absolute;
   background-color: #0000000;
-  top: 0;
+  /*top: 0;*/
   right: 0;
   opacity: 1;
+
 }
 
 #help{
-  position: absolute;
+  /*position: absolute;*/
   background-color: #BBBBBB;
-  top: 50px;
+  /*top: 50px;*/
   opacity: 0.7;
-
   font-size: large;
-  width: 100%;
-  padding-top: 12px;
-  padding-bottom: 12px;
+  /*width: 100%;*/
+  /*padding-top: 12px;*/
+  /*padding-bottom: 12px;*/
   text-align: center;
 }
 
 .helppic {
-  max-width: 50px;
-  max-height: 50px;
+  /*max-width: 50px;*/
+  /*max-height: 50px;*/
 }
