--- a/www/wikitude-worlds/common-assets/css/default.css
+++ b/www/wikitude-worlds/common-assets/css/default.css
@@ -21,7 +21,6 @@ div.__OVERLAY__mainDiv{
 
 .nav{
   background-color: #BBBBBB;
-  position: absolute;
   padding-top: 12px;
   padding-bottom: 12px;
   display: table;
@@ -32,7 +31,10 @@ div.__OVERLAY__mainDiv{
   left: 0;
   right: 0;
   text-align: center;
-}
+  position: static}
+
+#nav{
+  position: static}
 
 .info {
 }
