--- a/www/wikitude-worlds/common-assets/css/default.css
+++ b/www/wikitude-worlds/common-assets/css/default.css
@@ -1,6 +1,6 @@
 body {
   display: block;
-  margin: 0px;
+  margin: 0 0;
   font-family: Verdana;
 
 }
@@ -19,28 +19,31 @@ div.__OVERLAY__mainDiv{
   font-size: small;
 }
 
-.nav{
+/*#nav{
   background-color: #BBBBBB;
   padding-top: 12px;
   padding-bottom: 12px;
-  display: table;
+  !*display: table;*!
   width: 100%;
   height: 28px;
   opacity: 1;
-  top: 0;
+  !*top: 0;*!
   left: 0;
   right: 0;
   text-align: center;
-  position: static}
+  !*position: static*!
+}*/
 
 #nav{
-  position: static}
+  /*position: static*/
+}
 
 .info {
 }
 .navbutton{
   opacity: 1;
 }
+
 /*
 .button {
 	font-size: large;
@@ -85,6 +88,7 @@ div.__OVERLAY__mainDiv{
 }
 
 #helpbtn{
+  z-index: 10;
   position: absolute;
   background-color: #0000000;
   /*top: 0;*/
@@ -98,14 +102,30 @@ div.__OVERLAY__mainDiv{
   background-color: #BBBBBB;
   /*top: 50px;*/
   opacity: 0.7;
+
   font-size: large;
-  /*width: 100%;*/
+  width: 100%;
   /*padding-top: 12px;*/
   /*padding-bottom: 12px;*/
   text-align: center;
 }
 
+#helptitle{
+  color: #000000;
+}
+
 .helppic {
   /*max-width: 50px;*/
   /*max-height: 50px;*/
+}
+
+/*Ionic CSS Eigenschaften überschreiben*/
+
+#nav .button:after {
+  position: absolute;
+  top: 0px;
+  right: 0px;
+  bottom: 0px;
+  left: 0px;
+  content: ' ';
 }
