--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -10,7 +10,7 @@
   </ion-tab>
 
   <ion-tab title="360° View" icon="ion-aperture"
-           href="#/tab/360View" ng-click="launchAR('myFirstARWorld')">
+           href="#/tab/360View" ng-click="launchAR('06_ObjectTracking_3_Animated3dAugmentations')">
     <ion-nav-view name="360View-tab"></ion-nav-view>
   </ion-tab>
 
