--- a/www/templates/about.html
+++ b/www/templates/about.html
@@ -1,11 +1,16 @@
 <ion-view view-title="About">
   <ion-content class="padding">
-    <p>This App was created to show a use case for Augmented Reality in learning and finding information.</p>
+    <ion-item class="item item-text-wrap">
+      <p>This App was created to show a use case for Augmented Reality in learning and finding information.</p>
+      <p>Developed by:
+        Laura Dengra Torres</p>
+      <p>Abschlussarbeit: Usability for AR at UA</p>
+      <p>Erstprüfer: Martin Schober</p>
+    </ion-item>
   </ion-content>
-  <ion-footer-bar class="ion-grid">
-    <p>Laura Dengra Torres</p>
-    <p>in cooperation with SAP Software Solutions</p>
-    <p>Abschlussarbeit: Usability for AR at UA</p>
-    <p>Erstprüfer: Martin Schober</p>
+  <ion-footer-bar class="bar bar-footer">
+    <div ><p>Developed by:
+      Laura Dengra Torres, in cooperation with SAP Software Solutions</p></div>
+
   </ion-footer-bar>
 </ion-view>
