--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -10,14 +10,14 @@
   </ion-tab>
 
   <ion-tab title="360° View" icon="ion-aperture"
-           href="#/tab/360View" ng-click="launchAR('myFirstARWorld')">
+           href="#/tab/360View" ng-click="launchAR('360View')">
     <ion-nav-view name="360View-tab"></ion-nav-view>
   </ion-tab>
-
+<!--
   <ion-tab title="Learning Map" icon="ion-map"
     href="#/tab/learning-map">
     <ion-nav-view name="learning-map-tab"></ion-nav-view>
-  </ion-tab>
+  </ion-tab>-->
 
   <ion-tab title="About" icon="ion-information-circled"
     href="#/tab/about">
